--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+#Unity 3d
+/Temp
+/obj
+/library
+*.csproj
+*.unityproj
+*.sln
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
